# pelican-myst

./: .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yaml
pelican/plugins/myst/: __init__.py  reader.py  signals.py
tests/: helpers.py  test_myst_plugins.py  test_plugin.py  test_reader.py
tests/data/: gfm-strikethrough.md  gfm-table.md
tests/data/myst/: admonitions.md  tasklist.md
